calculator order analytics